<resources>
    <string name="app_name">Currency Exchange</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Test</string>
    <string name="date">Date</string>
    <string name="usd_to_lbp">USD to LBP</string>
    <string name="lbp_amount">LBP Amount</string>
    <string name="usd_amount">USD Amount</string>
    <string name="my_transactions">My Transactions</string>
    <string name="title_activity_real_main">RealMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lbp_exchange_rate">LBP Exchange Rate</string>
    <string name="buy_usd_rate">Buy USD Rate</string>
    <string name="n_a">N.A</string>
    <string name="sell_usd_rate">Sell USD Rate</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="calculator">Calculator</string>
    <string name="convert">Convert</string>
    <string name="brought_to_you_by_depression_and_caffeine_addiction">Brought to you by depression and caffeine addiction</string>
    <string name="_2a2wa_sarrafin">2a2wa Sarrafin</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="statistics">Statistics</string>
    <string name="register">Register</string>
    <string name="mytransactions">My Transactions</string>
    <string name="logout">Logout</string>
    <string name="to_refresh_the_rates_you_can_click_on_lbp_exchange_rate">To refresh the rates, you can click on LBP Exchange Rate</string>
    <string name="lbp_rate_evolution">LBP rate evolution</string>
    <string name="usd_rate_evolution">USD rate evolution</string>
    <string name="usd_buy_rate_evolution">USD Buy rate evolution</string>
    <string name="usd_sell_rate_evolution">USD Sell rate evolution</string>
    <string name="exchange_with_user">Exchange with User</string>
    <string name="add_transaction_with_another_user">Add Transaction with Another User</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="sell_usd">Sell USD</string>
    <string name="perform_transaction">Perform Transaction</string>
    <string name="buy_usd">Buy USD</string>
    <string name="my_exchanges">My Exchanges</string>
    <string name="with">With</string>
    <string name="name">Name</string>
    <string name="gave_to">Gave To</string>
    <string name="received_from">Received From</string>
</resources>