<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exchange"
            android:title="@string/exchange_rates" />
<!--            android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/nav_calculator"
            android:title="@string/calculator" />
<!--            android:icon="@drawable/ic_menu_gallery"-->
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/statistics" />
        <item
                android:id="@+id/nav_transactions"
                android:title="@string/mytransactions" />
        <item
            android:id="@+id/nav_exchangeUser"
            android:title="@string/exchange_with_user" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />

    </group>

</menu>