<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exchange"
            android:title="@string/exchange_rates" />
        <item
            android:id="@+id/nav_calculator"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_register"
            android:title="@string/register" />
    </group>

</menu>