<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transactions.TransactionsFragment">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/my_transactions"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/textHeader">


        <TextView
            android:id="@+id/usdAmount"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/usd_amount"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbpAmount"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/lbp_amount"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usdToLbp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/usd_to_lbp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/date"
            android:textAlignment="center"
            android:textStyle="bold" />


    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

</androidx.constraintlayout.widget.ConstraintLayout>