<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.exchange_user.GetExchanges">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/my_exchanges"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/gaveToHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/gave_to"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHeader" />

    <LinearLayout
        android:id="@+id/gaveToTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/gaveToHeader">


        <TextView
            android:id="@+id/receiverNameG"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:text="@string/name"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usdAmountG"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:text="@string/usd_amount"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbpAmountG"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:text="@string/lbp_amount"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usdToLbpG"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/usd_to_lbp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateG"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/date"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/receivedFromHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/received_from"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listviewG" />

    <LinearLayout
        android:id="@+id/receivedFromTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/receivedFromHeader">


        <TextView
            android:id="@+id/receiverNameR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:text="@string/name"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usdAmountR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:text="@string/usd_amount"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbpAmountR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:text="@string/lbp_amount"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usdToLbpR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/usd_to_lbp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/date"
            android:textAlignment="center"
            android:textStyle="bold" />


    </LinearLayout>


    <ListView
        android:id="@+id/listviewG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gaveToTable" />

    <ListView
        android:id="@+id/listviewR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receivedFromTable" />

</androidx.constraintlayout.widget.ConstraintLayout>